fixed text not showing

--- a/public/assets/indexstyle.css
+++ b/public/assets/indexstyle.css
@@ -5,7 +5,6 @@
         color: white;
       }
       body {
-        text-align: center;
         overflow: hidden;
         font-family: monospace;
       }
@@ -125,14 +124,9 @@ footer {
     position: absolute;
     bottom: 3%;
     width: 60%;
-    text-align: center
-}
-.small {
-  white-space: initial;
 }
 
 @media only screen and (max-width: 600px) {
-
   div {
     width: 80%;
     margin: auto;
@@ -142,7 +136,12 @@ footer {
     display: none;
   }
   p {
+    width: 80%;
     margin: auto;
-    width: 500px;
+    text-align: center;
   }
+  .small {
+  white-space: initial;
+  text-align: center;
+}
 }
